@@ -24,38 +24,38 @@ import io.swagger.v3.oas.models.servers.Server;
 @RequiredArgsConstructor(access = AccessLevel.PROTECTED)
 public class SwaggerConfig {
 
-	@Bean
-	public OpenAPI customOpenApi() {
+    @Bean
+    public OpenAPI customOpenApi() {
 
-		final SecurityScheme accessTokenAuth = new SecurityScheme()
-			.type(SecurityScheme.Type.HTTP)
-			.scheme("bearer")
-			.bearerFormat("JWT")
-			.in(SecurityScheme.In.HEADER)
-			.name("Authorization");
+        final SecurityScheme accessTokenAuth = new SecurityScheme()
+                .type(SecurityScheme.Type.HTTP)
+                .scheme("bearer")
+                .bearerFormat("JWT")
+                .in(SecurityScheme.In.HEADER)
+                .name("Authorization");
 
-		final SecurityRequirement securityRequirement = new SecurityRequirement()
-			.addList("accessTokenAuth")
-			.addList("refreshTokenAuth");
+        final SecurityRequirement securityRequirement = new SecurityRequirement()
+                .addList("accessTokenAuth")
+                .addList("refreshTokenAuth");
 
-		final Server server = new Server();
-		server.setUrl(BackDomain.LOCAL.getUrl());
-		server.setDescription(BackDomain.LOCAL.getDescription());
+        final Server server = new Server();
+        server.setUrl(BackDomain.LOCAL.getUrl());
+        server.setDescription(BackDomain.LOCAL.getDescription());
 
-		return new OpenAPI()
-			.info(new Info().title("Freeline API")
-				.description("Freeline API 서버")
-				.version("v1.0"))
-			.components(new Components()
-				.addSecuritySchemes("accessTokenAuth", accessTokenAuth))
-			.security(Collections.singletonList(securityRequirement))
-			.servers(List.of(server));
-	}
+        return new OpenAPI()
+                .info(new Info().title("Freeline API")
+                        .description("Freeline API 서버")
+                        .version("v1.0"))
+                .components(new Components()
+                        .addSecuritySchemes("accessTokenAuth", accessTokenAuth))
+                .security(Collections.singletonList(securityRequirement))
+                .servers(List.of(server));
+    }
 
-	@Bean
-	@Primary
-	public SwaggerUiConfigProperties swaggerUiConfigProperties(final SwaggerUiConfigProperties props) {
-		props.setPersistAuthorization(true);
-		return props;
-	}
+    @Bean
+    @Primary
+    public SwaggerUiConfigProperties swaggerUiConfigProperties(final SwaggerUiConfigProperties props) {
+        props.setPersistAuthorization(true);
+        return props;
+    }
 }
